src/test/ui/feature-gates/feature-gate-lang-items.stderr
error[E0658]: language items are subject to change
  --> $DIR/feature-gate-lang-items.rs:1:1
   |
LL | #[lang="foo"]   //~ ERROR language items are subject to change
   | ^^^^^^^^^^^^^
   |
   = help: add #![feature(lang_items)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
